--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
   					<p>
   						<!-- EDIT: Social Links. Replace # with your URL for each -->
   						<a href="https://github.com/markBruschwein"><i class="icon-github"></i></a>
-  						<a href="#"><i class="icon-linkedin"></i></a>
+  						<!-- <a href="#"><i class="icon-linkedin"></i></a> -->
   						<!-- <a href="#"><i class="icon-facebook"></i></a> -->
   						<!-- <a href="#"><i class="icon-linkedin"></i></a> -->
   						<!--<a href="#"><i class="icon-github"></i></a>-->
