--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
          <h5>ABOUT</h5>
        </div>
        <div class="col-lg-6">
-<p>I am a 23 year old, recently graduated from the University of Portland wiht
-  a B.S. in Mathematics and a minor in Computer Science. ALong with that I was
+<p>I am a 23 year old, recently graduated from the University of Portland with
+  a B.S. in Mathematics and upper level coursework in Computer Science. ALong with that I was
   a tutor for three years; forcing me to sharpen my ability to determine what
   people are asking as well as how to best explain myself. Having spent the past
    four years in a classroom I am excited to applying what I have learned in
