Changing email links to basic text

--- a/resume_hobbies.html
+++ b/resume_hobbies.html
@@ -1,5 +1,5 @@
 <!-- Author: Mark Bruschwein     -->
-<!-- Date: 10/21/2018            -->
+<!-- Date: 01/30/2019            -->
 
 
 
@@ -39,13 +39,13 @@
 
 
 
-   <div class="header animated fadeInUp" id="headerwrap">
+   <div class="headerHobbies animated fadeInUp" id="headerwrap">
      <div class="container">
        <div class="row centered">
          <div class="col-lg-12">
-           <h1>Mark Bruschwein</h1>
-           <h3>Freelance Coder |
-            bruschwein18@gmail.com
+           <h1>Hobbies</h1>
+           <h3>Ski Building |
+            <a href="https://www.instagram.com/powderproject/"> Insta: @powderproject</a>
            </h3>
          </div><!--/.col-lg-12-->
        </div><!--/.row-->
@@ -61,15 +61,10 @@
          <h5>ABOUT</h5>
        </div>
        <div class="col-lg-6">
-<p>I am a 23 year old, recently graduated from the University of Portland with
-  a B.S. in Mathematics and upper level coursework in Computer Science. ALong with that I was
-  a tutor for three years; forcing me to sharpen my ability to determine what
-  people are asking as well as how to best explain myself. Having spent the past
-   four years in a classroom I am excited to applying what I have learned in
-   exciting, helpful and realavent ways.</p>
+<p>I am a 22 year old, recently graduated from the University of Portland wiht a B.S. in Mathematics and a minor in Computer Science. ALong with that I was a tutor for three years; forcing me to sharpen my ability to determine what people are asking as well as how to best explain myself. Having spent the past four years in a classroom I am excited to applying what I have learned in exciting, helpful and realavent ways.</p>
 </div>
        <div class="col-lg-3">
-         <p><a href="../web_resume/2018_Fall_ Resume.pdf"><i class="icon-file"></i> <sm>Click for Resume!</sm></a></p>
+         <p><a href="2018_Fall_ Resume.pdf"><i class="icon-file"></i> <sm>Click for Resume!</sm></a></p>
        </div>
 
      </div><!--/.row-->
@@ -230,7 +225,7 @@
   				<!-- EDIT: email -->
   				<div class="col-lg-6">
   					<p><t>Email</t><br/>
-  						bruschwein18@gmail.com <br/>
+  						<a href="bruschwein18@gmail.com" class="mail">bruschwein18@gmail.com</a> <br/>
   					</p>
   					<!-- EDIT: address -->
   					<p><t>Address</t><br/>
@@ -247,7 +242,7 @@
   					<p>
   						<!-- EDIT: Social Links. Replace # with your URL for each -->
   						<a href="https://github.com/markBruschwein"><i class="icon-github"></i></a>
-  						<!-- <a href="#"><i class="icon-linkedin"></i></a> -->
+  						<a href="#"><i class="icon-linkedin"></i></a>
   						<!-- <a href="#"><i class="icon-facebook"></i></a> -->
   						<!-- <a href="#"><i class="icon-linkedin"></i></a> -->
   						<!--<a href="#"><i class="icon-github"></i></a>-->
