Rewording about section

--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
        </div>
        <div class="col-lg-6">
 <p>I am a 23 year old, recently graduated from the University of Portland with
-  a B.S. in Mathematics and upper level coursework in Computer Science. ALong with that I was
-  a tutor for three years; forcing me to sharpen my ability to determine what
-  people are asking as well as how to best explain myself. Having spent the past
-   four years in a classroom I am excited to applying what I have learned in
-   exciting, helpful and realavent ways.</p>
+    a B.S. in Mathematics and upper level coursework in Computer Science.
+   Additionally I was a tutor for three years; forcing me to sharpen my
+   ability to determine what people are asking as well as how to clarify
+   myself. Having spent the past four years in a classroom I am excited to apply
+   what I have learned in fun, helpful and realavent ways.</p>
 </div>
        <div class="col-lg-3">
          <p><a href="../web_resume/2018_Fall_ Resume.pdf"><i class="icon-file"></i> <sm>Click for Resume!</sm></a></p>
