Adding Relevant Experience

--- a/index.html
+++ b/index.html
@@ -78,6 +78,59 @@
 
 
 
+ <!-- Related Experience -->
+ <div class="container desc">
+   <div class="row">
+
+       <div class="col-lg-2 col-lg-offset-1">
+         <h5>RELATED EXPERIENCE</h5>
+       </div>
+
+       <!-- Experience Line 1-->
+       <div class="col-lg-6 ">
+         <p class="tight"><t>App Design Project</t><br/>
+           Team Lead, University of Portland, OR <br/>
+         </p>
+         <p><more>  •	Leads and delegates different tasks with a team of three
+                      peers to design an Android Texas Hold’em app<br/>
+                    •	Presents weekly progress updates for team members and
+                      Professor<br/>
+                    •	Developed comprehensive test cases to ensure the quality
+                      of the game.<br/>
+                    •	Constructs UI/UX of the app, and fashions how the playing
+                      cards appear on screen<br/>
+       </more></p>
+       </div>
+       <div class="col-lg-3">
+         <p><sm>January 2016 - May 2016 <br />
+       </div>
+
+       <!-- Experience Line 2 -->
+       <div class="col-lg-6 col-lg-offset-3">
+         <p class="tight"><t>Aspect Ski Company </t><br/>
+           CEO and Founder <br/>
+         </p>
+         <p><more> •	Designs and welds 4 piece 1500 pound Pneumatic Ski Press<br/>
+                   •	Partners with ADX to create custom CNC files for
+                      fabricating prototypes<br/>
+                   •	Researches and analyzes different markets segments within
+                      the skiing industry and identifies the need for sustainable skis<br/>
+                   •	Creates a pitch deck and secures investment funds for
+                      continued growth and purchasing equipment<br/>
+         </more></p>
+       </div>
+       <div class="col-lg-3">
+         <p><sm>May 2017 - PRESENT <br />
+         Portland, Oregon, USA -> Bozeman, MT, USA </sm></p>
+       </div>
+
+   </div><!--/.row -->
+   <br>
+   <hr>
+ </div><!--/.container -->
+
+
+
  <section id="resume" name="resume"></section>
  	<!-- EDUCATION SECTION -->
  	<div class="container desc">
@@ -141,7 +194,7 @@
  					<p><more> •	Communicating with students using diagrams and language to help them understand critical concepts, and reinforcing what they already know. <br/>
                     •	Overcoming language barriers with international students.<br/>
                     •	Finding knowledge gaps, and helping students strengthen their weak points.<br/>
-</more></p>
+          </more></p>
  				</div>
  				<div class="col-lg-3">
  					<p><sm>AUGUST 2015 - MAY 2018 <br />
@@ -156,7 +209,7 @@
  					<p><more> •	Involvement with manipulating and updating live streaming graphics in a fast paced environment.<br/>
             •	Live updating of graphics for basketball, volleyball, and soccer events.<br/>
             •	Editing live footage for instant replays.<br/>
-</more></p>
+          </more></p>
  				</div>
  				<div class="col-lg-3">
  					<p><sm>AUGUST 2015 - MAY 2015 <br />
