--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         </div>
         <div class="col-lg-3">
           <p><sm>May 2017 - PRESENT <br />
-          Portland, Oregon, USA -> Bozeman, MT, USA </sm></p>
+          Portland, Oregon -> Bozeman, MT </sm></p>
         </div>
 
     </div><!--/.row -->
