--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           </more></p>
         </div>
         <div class="col-lg-3">
-          <p><sm>May 2017 - PRESENT <br />
+          <p><sm>May 2017 - PRESENT <br/>
           Portland, Oregon -> Bozeman, MT </sm></p>
         </div>
 
@@ -171,29 +171,36 @@
  					<h5>WORK EXPERIENCE</h5>
  				</div>
 
-        <!-- Work line 1-->
+        <!-- Freelance Line line 1-->
         <div class="col-lg-6 ">
-          <p class="tight"><t>Barista</t><br/>
-            City Brew <br/>
+          <p class="tight"><t>Freelance - Web Design</t><br/>
+
           </p>
-          <p><more> •	Multitasking in a fast paced work environment.<br/>
-            •	Communicating with costomers to provide the best experience.<br/>
-            •	Working as a team member to produce a quality produce as quickly as possible.<br/>
+          <p><more> •	Maintains the designs and formats, and upgrades
+                      functionality of existing websites<br/>
+                    •	Optimizes SEO for various entrepreneurs and business
+                      professionals<br/>
+                    •	Coaches entrepreneurs in maintaining their websites and
+                      blogs<br/>
         </more></p>
         </div>
         <div class="col-lg-3">
-          <p><sm>June 2018 - December 2018 <br />
+          <p><sm>December 2018 - PRESENT <br />
           Bozeman, Montana, USA</sm></p>
         </div>
 
- 				<!-- Work line 2 -->
+ 				<!-- Math Tutor line -->
  				<div class="col-lg-6 col-lg-offset-3">
  					<p class="tight"><t>Math Tutor </t><br/>
  						University of Portland Resource Center <br/>
  					</p>
- 					<p><more> •	Communicating with students using diagrams and language to help them understand critical concepts, and reinforcing what they already know. <br/>
-                    •	Overcoming language barriers with international students.<br/>
-                    •	Finding knowledge gaps, and helping students strengthen their weak points.<br/>
+ 					<p><more> •	Communicates with students using diagrams and language to
+                      facilitate understanding of critical concepts, and
+                      reinforces what they already know<br/>
+                    •	Utilizes different learning modalities to overcome
+                      language barriers with international students<br/>
+                    •	Leads focused study sessions available to a student body
+                      of over 4000<br/>
           </more></p>
  				</div>
  				<div class="col-lg-3">
@@ -201,14 +208,14 @@
  					Portland, Oregon, USA</sm></p>
  				</div>
 
- 				<!-- Work line 3-->
+ 				<!-- Video Production Assistant-->
  				<div class="col-lg-6 col-lg-offset-3">
  					<p class="tight"><t>Video Production Assistant</t><br/>
  						University of Portland Athletics <br/>
  					</p>
  					<p><more> •	Involvement with manipulating and updating live streaming graphics in a fast paced environment.<br/>
-            •	Live updating of graphics for basketball, volleyball, and soccer events.<br/>
-            •	Editing live footage for instant replays.<br/>
+            •	Updates live graphics for basketball, volleyball, and soccer events.<br/>
+            •	Edits live footage for instant replays.<br/>
           </more></p>
  				</div>
  				<div class="col-lg-3">
