--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
  	<div class="container desc">
  		<div class="row">
  				<div class="col-lg-2 col-lg-offset-1">
- 					<h5>Volunteer Experience</h5>
+ 					<h5>VOLUNTEER EXPERIENCE</h5>
  				</div>
 
  				<!-- Voli line 1-->
