--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <!-- Experience Line 1-->
         <div class="col-lg-6 ">
           <p class="tight"><t>App Design Project</t><br/>
-            Team Lead, University of Portland, OR <br/>
+            <i>Team Lead,<i/> University of Portland, OR <br/>
           </p>
           <p><more>  •	Leads and delegates different tasks with a team of three
                        peers to design an Android Texas Hold’em app<br/>
@@ -141,7 +141,7 @@
         <!-- Experience Line 2 -->
         <div class="col-lg-6 col-lg-offset-3">
           <p class="tight"><t>Aspect Ski Company </t><br/>
-            CEO and Founder <br/>
+            <i>CEO and Founder</i> <br/>
           </p>
           <p><more> •	Designs and welds 4 piece 1500 pound Pneumatic Ski Press<br/>
                     •	Partners with ADX to create custom CNC files for
