--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <!-- Experience Line 1-->
         <div class="col-lg-6 ">
           <p class="tight"><t>App Design Project</t><br/>
-            <i>Team Lead,<i/> University of Portland, OR <br/>
+            <i>Team Lead,</i> University of Portland, OR <br/>
           </p>
           <p><more>  •	Leads and delegates different tasks with a team of three
                        peers to design an Android Texas Hold’em app<br/>
