--- a/resume_hobbies.html
+++ b/resume_hobbies.html
@@ -16,7 +16,7 @@
    <link rel="apple-touch-icon" href="icon.png" />
 
 
-   <title>Mark's Resume</title>
+   <title>Aspect Skis</title>
 
    <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -43,8 +43,8 @@
      <div class="container">
        <div class="row centered">
          <div class="col-lg-12">
-           <h1>Hobbies</h1>
-           <h3>Ski Building |
+           <h1>Aspect Ski Co.</h1>
+           <h3>Handcrafted Skis |
             <a href="https://www.instagram.com/powderproject/"> Insta: @powderproject</a>
            </h3>
          </div><!--/.col-lg-12-->
