--- a/resume_hobbies.html
+++ b/resume_hobbies.html
@@ -219,30 +219,18 @@
   		<div class="container">
   			<div class="row">
 
-  				<div class="col-lg-2 col-lg-offset-1">
-  					<h5>CONTACT INFORMATION</h5>
-  				</div>
-  				<!-- EDIT: email -->
-  				<div class="col-lg-6">
-  					<p><t>Email</t><br/>
-  						<a href="bruschwein18@gmail.com" class="mail">bruschwein18@gmail.com</a> <br/>
-  					</p>
-  					<!-- EDIT: address -->
-  					<p><t>Address</t><br/>
-  						2905 West Villard St. <br/>
-  						Bozeman, Montana 59718 <br/>
-  					</p>
-  					<!-- EDIT: phone number -->
-  					<p><t>Phone</t><br/>
-  						<a href="tel:4068398803" class="tel">(406) 839-8803</a> <br/>
-  					</p>
-  				</div>
-  				<div class="col-lg-3">
-  					<p><sm>SOCIAL LINKS</sm></p>
+  				<div class="col-lg-2 col-lg-offset-3">
+
+  					<p><h2 color:"white";>SOCIAL LINKS</h2></p>
+             </div>
+
+             <div class="col-lg-2 ">
   					<p>
   						<!-- EDIT: Social Links. Replace # with your URL for each -->
-  						<a href="https://github.com/markBruschwein"><i class="icon-github"></i></a>
-  						<a href="#"><i class="icon-linkedin"></i></a>
+  						<!-- <a href="https://github.com/markBruschwein"><i class="icon-github"></i></a> -->
+  						<!-- <a href="#"><i class="icon-linkedin"></i></a> -->
+              &nbsp;<br/>
+              <a href="https://www.instagram.com/powderproject/"><i class="icon-instagram"></i></a>
   						<!-- <a href="#"><i class="icon-facebook"></i></a> -->
   						<!-- <a href="#"><i class="icon-linkedin"></i></a> -->
   						<!--<a href="#"><i class="icon-github"></i></a>-->
