--- a/resume_hobbies.html
+++ b/resume_hobbies.html
@@ -58,13 +58,22 @@
    <div class="container">
      <div class="row">
        <div class="col-lg-2 col-lg-offset-1">
-         <h5>ABOUT</h5>
+         <h5>The Press</h5>
        </div>
        <div class="col-lg-6">
-<p>I am a 22 year old, recently graduated from the University of Portland wiht a B.S. in Mathematics and a minor in Computer Science. ALong with that I was a tutor for three years; forcing me to sharpen my ability to determine what people are asking as well as how to best explain myself. Having spent the past four years in a classroom I am excited to applying what I have learned in exciting, helpful and realavent ways.</p>
+         <p> A press is arguably the most diffictult piece of equipment to come
+            by for ski building. Without a press there is no way to create a
+            rocker/camber profile in skis. Presses are also important because they
+            provide the pressure needed to form the ski materials to their shape.
+            A commercially sold ski press is rather rare and expensive. Companies
+             that need them tend to build them on their own.
+            Inspired by ON3P I decided to do the same.
+            The result was a 1500 pound hunk of metal.
+            </p>
 </div>
        <div class="col-lg-3">
-         <p><a href="2018_Fall_ Resume.pdf"><i class="icon-file"></i> <sm>Click for Resume!</sm></a></p>
+         <p><img src="images/ski_press.jpg" alt="Homemade Ski Press"
+           style="width:300px;height:200px;"></p>
        </div>
 
      </div><!--/.row-->
@@ -79,15 +88,16 @@
  		<div class="row">
 
  				<div class="col-lg-2 col-lg-offset-1">
- 					<h5>EDUCATION</h5>
+
  				</div>
  				<!-- Education line 1 -->
  				<div class="col-lg-6">
- 					<p><t>Bachelor of Science in Mathematics</t><br/>
-            Minor: Computer Science<br/>
-            <br/>
-            University of Portland <br/>
-
+ 					<p>
+            A ski press is absolutesly necessary for ski building but a fantastic
+            ski press does not ensure high quality skis. For that there is still
+            so much to take into account. The two reamining major keys are the
+            ski materials and the ski design.
+             <br/>
             <!-- <br/>
             <br/>
             Completed: May 2018 -->
@@ -96,7 +106,7 @@
  				</div>
 
         <div class="col-lg-3">
-            Completed: May 2018
+
         </div>
 
 
@@ -110,53 +120,52 @@
  		<div class="row">
 
  				<div class="col-lg-2 col-lg-offset-1">
- 					<h5>WORK EXPERIENCE</h5>
+
+          <p>&nbsp;</p>
+ 					<h5>The First Ski Design</h5>
  				</div>
 
         <!-- Work line 1-->
         <div class="col-lg-6 ">
-          <p class="tight"><t>Barista</t><br/>
-            City Brew <br/>
+          <p class="tight"><t>SKI DESIGNS</t><br/>
+            <br/>
+            Enter Photo here
           </p>
-          <p><more> •	Multitasking in a fast paced work environment.<br/>
-            •	Communicating with costomers to provide the best experience.<br/>
-            •	Working as a team member to produce a quality produce as quickly as possible.<br/>
-        </more></p>
+
         </div>
+
         <div class="col-lg-3">
-          <p><sm>June 2018 - December 2018 <br />
-          Bozeman, Montana, USA</sm></p>
+
+          <p>&nbsp;</p>
+          <p><sm> Enter photo here<br />
+
+          </sm></p>
         </div>
 
- 				<!-- Work line 2 -->
- 				<div class="col-lg-6 col-lg-offset-3">
- 					<p class="tight"><t>Math Tutor </t><br/>
- 						University of Portland Resource Center <br/>
- 					</p>
- 					<p><more> •	Communicating with students using diagrams and language to help them understand critical concepts, and reinforcing what they already know. <br/>
-                    •	Overcoming language barriers with international students.<br/>
-                    •	Finding knowledge gaps, and helping students strengthen their weak points.<br/>
-</more></p>
- 				</div>
- 				<div class="col-lg-3">
- 					<p><sm>AUGUST 2015 - MAY 2018 <br />
- 					Portland, Oregon, USA</sm></p>
+
+        <!-- second ski desing -->
+        <div class="col-lg-2 col-lg-offset-1">
+
+          <p>&nbsp;</p>
+ 					<h5>The Second Ski Design</h5>
  				</div>
 
- 				<!-- Work line 3-->
- 				<div class="col-lg-6 col-lg-offset-3">
- 					<p class="tight"><t>Video Production Assistant</t><br/>
- 						University of Portland Athletics <br/>
- 					</p>
- 					<p><more> •	Involvement with manipulating and updating live streaming graphics in a fast paced environment.<br/>
-            •	Live updating of graphics for basketball, volleyball, and soccer events.<br/>
-            •	Editing live footage for instant replays.<br/>
-</more></p>
- 				</div>
- 				<div class="col-lg-3">
- 					<p><sm>AUGUST 2015 - MAY 2015 <br />
- 					Portland, Oregon, USA</sm></p>
- 				</div>
+        <!-- Work line 1-->
+        <div class="col-lg-6 ">
+          <p class="tight"><t></t><br/>
+            <br/>
+            Enter Photo here
+          </p>
+
+        </div>
+
+        <div class="col-lg-3">
+
+          <p>&nbsp;</p>
+          <p><sm> Enter photo here<br />
+
+          </sm></p>
+        </div>
 
 
 
