Updating index.html

--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
          <h5>ABOUT</h5>
        </div>
        <div class="col-lg-6">
-<p>I am a 23 year old, recently graduated from the University of Portland with
+<p>I am a recent graduate of the University of Portland with
     a B.S. in Mathematics and upper level coursework in Computer Science.
-   Additionally I was a tutor for three years; forcing me to sharpen my
+   Additionally I was a tutor for three years, forcing me to sharpen my
    ability to determine what people are asking as well as how to clarify
    myself. Having spent the past four years in a classroom I am excited to apply
-   what I have learned in fun, helpful and realavent ways.</p>
+   what I have learned in fun, helpful and relevent ways.</p>
 </div>
        <div class="col-lg-3">
          <p><a href="../web_resume/2018_Fall_ Resume.pdf"><i class="icon-file"></i> <sm>Click for Resume!</sm></a></p>
@@ -89,7 +89,7 @@
  				<!-- Education line 1 -->
  				<div class="col-lg-6">
  					<p><t>Bachelor of Science in Mathematics</t><br/>
-            Minor: Computer Science<br/>
+            Extensive coursework in Computer Science<br/>
             <br/>
             University of Portland <br/>
 
@@ -101,7 +101,8 @@
  				</div>
 
         <div class="col-lg-3">
-            Completed: May 2018
+            Completed: May 2018<br/>
+            Portlnad, OR, USA
         </div>
 
 
@@ -122,10 +123,10 @@
         <!-- Experience Line 1-->
         <div class="col-lg-6 ">
           <p class="tight"><t>App Design Project</t><br/>
-            <i>Team Lead,</i> University of Portland, OR <br/>
+            <i>Team Lead,</i> University of Portland <br/>
           </p>
           <p><more>  •	Leads and delegates different tasks with a team of three
-                       peers to design an Android Texas Hold’em app<br/>
+            peers to design an Android Texas Hold’em app<br/>
                      •	Presents weekly progress updates for team members and
                        Professor<br/>
                      •	Developed comprehensive test cases to ensure the quality
@@ -136,6 +137,8 @@
         </div>
         <div class="col-lg-3">
           <p><sm>January 2016 - May 2016 <br />
+            Portland, OR, USA
+            </sm></p>
         </div>
 
         <!-- Experience Line 2 -->
@@ -146,7 +149,7 @@
           <p><more> •	Designs and welds 4 piece 1500 pound Pneumatic Ski Press<br/>
                     •	Partners with ADX to create custom CNC files for
                        fabricating prototypes<br/>
-                    •	Researches and analyzes different markets segments within
+                    •	Researches and analyzes different market segments within
                        the skiing industry and identifies the need for sustainable skis<br/>
                     •	Creates a pitch deck and secures investment funds for
                        continued growth and purchasing equipment<br/>
@@ -196,7 +199,7 @@
  					</p>
  					<p><more> •	Communicates with students using diagrams and language to
                       facilitate understanding of critical concepts, and
-                      reinforces what they already know<br/>
+                      reinforce what they already know<br/>
                     •	Utilizes different learning modalities to overcome
                       language barriers with international students<br/>
                     •	Leads focused study sessions available to a student body
