--- a/index.html
+++ b/index.html
@@ -245,11 +245,10 @@
  				<div class="col-lg-6">
  					<p><t>Stem Club Leader</t><br/>
  						Metropolitan Learning Center<br/>
-            <p><more>Leading Stem Club was a great opportunity to apply my
-              tutoring skills in a broader setting. Instead of strictly focusing
-              on Mathematics I was able to work with 7th and 8th graders,
-              helping them to pursue questions and curiosities about the natural
-              world and the underlying science.</more></p>
+            <p><more> •	Teaches 7th and 8th graders about STEM fields using interactive projects/experiments<br/>
+              •	Encourages the students to explore the world around them, and discover answers for themselves<br/>
+              •	Articulates the importance of question asking, and how it fuels science<br/>
+            </more></p>
 
 
  				</div>
@@ -264,11 +263,10 @@
  					<p class="tight"><t>Volunteer Ski Patrol</t><br/>
  						Big Sky Resort
  					</p>
- 					<p><more>Volunteer Ski patrol is a great experience that sits at the
-            intersection of my love for the outdoors and desire to help others.
-            Working in this environment requires rapid analytical skills and
-            quick thinking to provide quality care and transport for patients as
-            quickly as possible.</more></p>
+          <p><more> •	Maintains a safe environment for resort guests<br/>
+            •	Quickly evaluates situations and formulates plans of action<br/>
+            •	Collaborates in a team setting to efficiently provide best possible care for patients	<br/>
+          </more></p>
 
       	</div>
  				<div class="col-lg-3">
