Change Linked Resume

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
    what I have learned in fun, helpful and relevent ways.</p>
 </div>
        <div class="col-lg-3">
-         <p><a href="../web_resume/2018_Fall_ Resume.pdf"><i class="icon-file"></i> <sm>Click for Resume!</sm></a></p>
+         <p><a href="../web_resume/2019_Spring_ Resume.pdf"><i class="icon-file"></i> <sm>Click for Resume!</sm></a></p>
        </div>
 
      </div><!--/.row-->
@@ -293,7 +293,7 @@
   					<p><t>Email</t><br/>
   						bruschwein18@gmail.com <br/>
   					</p>
-  				
+
   					<!-- EDIT: phone number -->
   					<p><t>Phone</t><br/>
   						<a href="tel:4068398803" class="tel">(406) 839-8803</a> <br/>
