--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
    <meta name="description" content="">
    <!-- OPTIONAL: author -->
    <meta name="author" content="">
-   <link rel="shortcut icon" href="favicon.ico">
    <link rel="apple-touch-icon" href="icon.png" />
+   <link rel="shortcut icon" type="image/x-icon" href="untitled.png" />
 
 
    <title>Mark's Resume</title>
