--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
         <div class="col-lg-3">
             Completed: May 2018<br/>
-            Portlnad, OR, USA
+            Portland, OR, USA
         </div>
 
 
